# data-engineer-challenge

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  docker_guide.md  pyproject.toml  readme_solution.md
docs/: arquitetura.md  arquitetura_scale.md  docker_guide.md  domain-glossary.md  exemplo-queries.md  gold-schema.md  produtos-de-dados.md
docs/sample-data/: enterprise_company.parquet  reconciliation_results.parquet  reconciliation_runs.parquet  settlement_paysettler.csv  transactions_batch_1.parquet  transactions_batch_2.parquet
output/alerts/: 2025-03-31_alert.json
output/reports/: 20250331_cfo_report.html
scripts/: generate_sample_data.py  print_health.py
src/: db.py
src/a_bronze/: cdc_transaction.py  enterprise_company.py  reconciliation_results.py  reconciliation_runs.py  settlement_loader.py
src/b_silver/: build.py  cdc_company.py  cdc_reconc.py  reconcile.py
src/c_gold/: build.py
src/observability/: health.py
src/outputs/: cfo_report.py  ops_alert.py
src/products/: cfo_report.py  ops_alert.py  ops_run_report.py
tests/: sample_generator.ipynb  test_cdc_loader.ipynb  test_generate_sample_data.py  test_gold.ipynb  test_settlement_loader.ipynb  test_settlement_loader.py
tmp_sample_data_test/: enterprise_company.parquet  reconciliation_results.parquet  reconciliation_runs.parquet  settlement_paysettler.csv  transactions_batch_1.parquet  transactions_batch_2.parquet
tmp_sample_data_test/paysettler/: settlement_2025-03-01.csv  settlement_2025-03-02.csv  settlement_2025-03-03.csv  settlement_2025-03-04.csv  (+8 more)
(+49 files in other folders)
