[project]
name = "data-engineer-challenge"
version = "0.1.0"
description = "Data Engineer Technical Challenge"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.2.0",
    "pyarrow>=18.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.8.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true
